fix: bottom of the logo is now not cut off on some resolutions

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,10 @@
     }
 }
 
+svg:not(:root) {
+    overflow: visible;
+}
+
 .logo {
     display: grid;
     align-items: center;
